--- a/app/src/main/res/layout/layout_floating_window.xml
+++ b/app/src/main/res/layout/layout_floating_window.xml
@@ -43,4 +43,99 @@
         android:layout_marginStart="8dp"
         android:visibility="gone" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/shishens_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/toggle_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/input_text"
+        android:layout_marginEnd="8dp" />
+
+    <TextView
+        android:id="@+id/input_text"
+        android:layout_width="192dp"
+        android:layout_height="64dp"
+        android:text="@string/app_name"
+        android:gravity="center_vertical|right"
+        android:layout_marginRight="16dp"
+        android:textSize="34sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggle_button"
+        tools:ignore="RtlHardcoded" />
+
+    <TableLayout
+        android:id="@+id/table_layout"
+        android:layout_width="192dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_text">
+
+        <TableRow android:layout_weight="1">
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/delete_button"
+                android:text="DEL"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/abc_button"
+                android:text="ABC"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/def_button"
+                android:text="DEF"/>
+
+        </TableRow>
+
+        <TableRow android:layout_weight="1">
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/ghi_button"
+                android:text="GHI"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/jkl_button"
+                android:text="JKL"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/mno_button"
+                android:text="MNO"/>
+
+        </TableRow>
+
+        <TableRow android:layout_weight="1">
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/pqrs_button"
+                android:text="PQRS"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/tuv_button"
+                android:text="TUV"/>
+
+            <Button
+                style="@style/AppTheme.ImageButtonInGrid"
+                android:id="@+id/wxyz_button"
+                android:text="WXYZ"/>
+
+        </TableRow>
+
+    </TableLayout>
+
 </android.support.constraint.ConstraintLayout>
