--- a/app/src/main/res/layout/recycler_shishen_selection.xml
+++ b/app/src/main/res/layout/recycler_shishen_selection.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="172dp"
-    android:layout_height="64dp">
+    android:layout_height="64dp"
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/avatar_image"
