--- a/app/src/main/res/layout/layout_floating_window.xml
+++ b/app/src/main/res/layout/layout_floating_window.xml
@@ -3,32 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/window_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/colorWindowBackground">
 
     <ImageButton
         android:id="@+id/toggle_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/goals_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="@+id/toggle_button"
         app:layout_constraintStart_toEndOf="@+id/toggle_button"
-        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/toggle_button"
-        android:visibility="gone"/>
+        tools:ignore="RtlHardcoded" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/goal_details_recycler_view"
@@ -36,47 +33,41 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toggle_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        android:visibility="gone" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/shishens_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintTop_toBottomOf="@+id/toggle_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/input_text"
-        android:layout_marginEnd="8dp" />
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:id="@+id/input_text"
         android:layout_width="192dp"
         android:layout_height="64dp"
         android:gravity="center_vertical|right"
-        android:layout_marginRight="16dp"
         android:textSize="34sp"
+        android:lines="1"
+        android:background="@color/colorWhite"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toggle_button"
         tools:ignore="RtlHardcoded" />
 
     <TableLayout
         android:id="@+id/table_layout"
-        android:layout_width="192dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_text">
+        app:layout_constraintTop_toBottomOf="@+id/input_text"
+        app:layout_constraintStart_toStartOf="@+id/input_text">
 
         <TableRow android:layout_weight="1">
 
