--- a/app/src/main/res/layout/recycler_shishen_selection.xml
+++ b/app/src/main/res/layout/recycler_shishen_selection.xml
@@ -2,8 +2,10 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="172dp"
+    android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:layout_margin="8dp"
+    android:background="@color/colorWhite"
     android:clickable="true"
     android:focusable="true">
 
@@ -38,4 +40,5 @@
         app:layout_constraintTop_toBottomOf="@+id/name_text"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" />
+
 </android.support.constraint.ConstraintLayout>
