--- a/app/src/main/res/layout/recycler_goal_detail.xml
+++ b/app/src/main/res/layout/recycler_goal_detail.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="128dp"
-    android:layout_height="192dp">
+    android:layout_height="192dp"
+    android:background="@color/colorWhite">
 
     <TextView
         android:id="@+id/name_text"
