--- a/app/src/main/res/layout/recycler_goal_button.xml
+++ b/app/src/main/res/layout/recycler_goal_button.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.perqin.gandear.floatingwindow.ui.LabelCircleImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/image_button"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
-    android:scaleType="fitCenter"
-    android:background="#00000000"/>
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:background="#00000000"
+    android:clickable="true"
+    android:focusable="true"
+    android:src="@drawable/shishen_default_avatar"
+    app:labelTextSize="10sp"
+    app:label="式神名称"/>
