--- a/app/src/main/res/layout/layout_floating_window.xml
+++ b/app/src/main/res/layout/layout_floating_window.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorWindowBackground">
 
-    <ImageButton
+    <com.perqin.gandear.floatingwindow.ui.DraggableToggleImageButton
         android:id="@+id/toggle_button"
         android:layout_width="72dp"
         android:layout_height="72dp"
