--- a/app/src/main/res/layout/layout_floating_window.xml
+++ b/app/src/main/res/layout/layout_floating_window.xml
@@ -5,21 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/window_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorWindowBackground">
+    android:layout_height="match_parent">
 
     <com.perqin.gandear.floatingwindow.ui.DraggableToggleImageButton
         android:id="@+id/toggle_button"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:src="@drawable/ic_expand"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/quick_add_button"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:src="@drawable/ic_expand"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/toggle_button"
